--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://example.com"
+baseURL = "https://epogrebnyak.github.io/icode/"
 # [en, zh-cn, fr, pl, ...] determines default content language
 # [en, zh-cn, fr, pl, ...] 设置默认的语言
 defaultContentLanguage = "en"
@@ -11,7 +11,7 @@ theme = "LoveIt"
 
 # website title
 # 网站标题
-title = "A few ideas about code"
+title = "Some findings about code"
 
 # whether to use robots.txt
 # 是否使用 robots.txt
@@ -93,7 +93,7 @@ enableEmoji = true
         weight = 6
     [languages.en.params]
       # site description
-      description = "About LoveIt Theme"
+      description = "What I've learned in Python, Julia, Haskell"
       # site keywords
       keywords = ["Theme", "Hugo"]
       # App icon config
@@ -141,7 +141,7 @@ enableEmoji = true
           # Gravatar Email for preferred avatar in home page
           gravatarEmail = ""
           # URL of avatar shown in home page
-          avatarURL = "/images/ep.png"
+          avatarURL = "ep.png"
           # title shown in home page (HTML format is supported)
           title = "Some findings about code"
           # subtitle shown in home page
